# explain-error-tool

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: cli.py  config.py  detector.py  formatter.py  llm.py  main.py  models.py  parser.py  prompts.py
tests/: test_detector.py  test_formatter.py  test_main.py  test_parser.py
tests/fixtures/: go_nil_pointer.txt  java_nullpointer.txt  java_spring_startup.txt  node_econnrefused.txt  node_missing_module.txt  python_module_error.txt  python_type_error.txt
